--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
 
 * {
     margin: 0 auto;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -66,13 +67,14 @@ a {
     justify-content: flex-end;
 }
 
-.menu > div > a{
+.menu > div {
     margin:0 10px;
     font-size: 18px;
     font-weight: bold;
     color: rgba(255, 255, 255, 0.6);
     font-family: 'GmarketSansMedium', sans-serif;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 #header_middle {
@@ -105,20 +107,20 @@ a {
 
 .inner_box {
     width: 1080px;
-    height: 300px;
-    border: 1px solid skyblue;
+    /* 지워야 함!!!! */
+    padding: 50px 0;
 }
 
 #about_me_box {
-    background-color: white;
+    background-color: lightcoral;
 }
 
 #skills_box{
-    background-color: greenyellow;
+    background-color: lightblue;
 }
 
 #archiving_box{
-    background-color: aqua;
+    background-color: greenyellow;
 }
 
 #projects_box{
@@ -129,4 +131,34 @@ a {
     width: 100%;
     height: 200px;
     background-color: black;
+}
+
+.body_title {
+    text-align: center;
+}
+
+.body_title > a{
+    text-align: center;
+    color: white;
+    font-family: 'SBAggroB', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);   
+    font-size: 40px;
+    cursor: pointer;
+}
+
+.about_me_list {
+    display: flex;
+    margin-top: 50px;
+}
+
+.ab_bold_text {
+    font-family: 'GmarketSansMedium', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.ab_text {
+    text-align: center;
 }
