feat: projects 마무리

--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ a {
 #header_top {
     position: fixed;
     width: 100%;
+    z-index: 2000;
 }
 
 #header_top_box {
@@ -63,6 +64,7 @@ a {
     font-weight: bold;
     font-family: 'GmarketSansMedium', sans-serif;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 .title > a {
@@ -132,11 +134,12 @@ a {
 }
 
 #archiving_box{
-    background-color: greenyellow;
+    background-color: rgb(181, 214, 146)    ;
 }
 
 #projects_box{
-    background-color: cornflowerblue;
+    background-color: rgb(203, 170, 203);
+    /* background-color: #C3E2DD; */
 }
 
 #footer {
@@ -298,6 +301,14 @@ a {
     margin-bottom: 20px;
 }
 
+.style_b {
+    color: blue;
+}
+
+.style_b:hover {
+    text-decoration: underline; /* 마우스를 올렸을 때 밑줄 표시 */
+}
+
 .archiving_context_box:hover .style_a {
     text-decoration: underline; /* 마우스를 올렸을 때 밑줄 표시 */
 }
@@ -320,6 +331,7 @@ li {
 }
 
 .project_period {
+    font-family: 'SUITE-Regular', sans-serif;
     color: gray;
     margin-bottom: 20px;
 }
@@ -328,29 +340,14 @@ li {
     display: flex;
 }
 
-#image-container1 {
-    width: 70%;
-    height: 70vh;
-    background-size: cover;
-    background-position: center;
-    transition: background-image 0.5s ease-in-out;
-    cursor: pointer;
-}
-
-#image-container2 {
-    width: 70%;
-    height: 70vh;
-    background-size: cover;
-    background-position: center;
-    transition: background-image 0.5s ease-in-out;
-    cursor: pointer;
-}
-
-#image-container3 {
-    width: 70%;
-    height: 70vh;
-    background-size: cover;
-    background-position: center;
+.image_container {
+    width: 450px; /* 박스의 가로 크기 */
+    height: 450px; /* 박스의 세로 크기 */
+    background-size: contain; /* 이미지를 박스에 맞게 조절 */
+    background-position: center; /* 이미지를 가운데 정렬 */
+    background-repeat: no-repeat; /* 이미지를 반복하지 않음 */
+    border: 2px solid gray;
+    padding: 50px;
     transition: background-image 0.5s ease-in-out;
     cursor: pointer;
 }
@@ -362,7 +359,7 @@ li {
     background-size: cover;
     background-position: center;
     cursor: pointer;
-    margin-top: 245px;
+    margin-top: 180px;
 }
 
 .right_arrow_icon {
@@ -372,7 +369,7 @@ li {
     background-size: cover;
     background-position: center;
     cursor: pointer;
-    margin-top: 245px;
+    margin-top: 180px;
 }
 
 .projectDescription {
@@ -382,6 +379,7 @@ li {
 
 .descriptionUl {
     margin-left: 50px;
+    float: left;
 }
 
 .descriptionUl li {
@@ -389,8 +387,17 @@ li {
     position: relative;
     padding-left: 30px;
     font-family: 'GmarketSansMedium', sans-serif;
-    font-size: 25px;
+    font-size: 15px;
     margin-bottom: 20px;
+    user-select: none;
+}
+
+.descriptionUl li > b {
+    font-size: 25px;
+}
+
+.left_description {
+    user-select: none;
 }
 
 .descriptionUl li::before {
@@ -405,4 +412,28 @@ li {
     left: 0; /* 왼쪽 정렬 */
     top: 50%; /* 수직 정렬을 위해 부모의 50% 지점에 위치 */
     transform: translateY(-50%); /* 수직 정렬 조절 */
+}
+
+#scrollToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 25px;
+    cursor: pointer;
+    border: 2px solid black;
+    background: url(../img/icon_arrow_up.png);
+    background-color: #fff;
+    background-size: cover;
+    background-position: center;
+}
+
+.explain_text {
+    font-family: 'SUITE-Regular', sans-serif;
+}
+
+.footer_text {
+    color: #fff;
+    text-align: center;
+    padding-top: 100px;
 }
