--- a/css/index.css
+++ b/css/index.css
@@ -438,3 +438,22 @@ li {
     text-align: center;
     padding-top: 100px;
 }
+
+.text_btn {
+    width: 50px;
+    height: 50px;
+    background: url(../img/magnifier.png);
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.image_btn {
+    display: none;
+    width: 50px;
+    height: 50px;
+    background: url(../img/image_icon.png);
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
